--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -24,7 +24,7 @@
       </div>
       <div class="col line line--left text-left">
         <div class="hero__button margin-top--lg">
-          <a [routerLink]="['work']" class="btn btn-primary-outline button--white btn-lg hero__link">Our work</a>
+          <a [routerLink]="['work']" class="btn btn--lg">Our work</a>
         </div>
         <div class="padding--lg"></div>
       </div>
