--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -7,6 +7,7 @@ $line-height-base: 1.5;
 $heading-1: 55;
 $heading-2: 42;
 $heading-3: 16;
+$heading-4: 14;
 $heading-1-mobile: 34;
 $heading-2-mobile: 24;
 
