--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,38 +1,31 @@
-<footer>
-  <div class="footer">
+<footer class="footer">
     <div class="container">
       <blockquote class="text-center">
         <q>You've made it to the bottom!</q>
         <footer>- Jupiter and the Giraffe</footer>
       </blockquote>
-      <div class="row">
-        <div class="col-md-4">
-          <section>
-            <header>
-              <h2 class="footer__title heading-3">Brands</h2>
-            </header>
-            <ul class="list-unstyled">
-              <li *ngFor="let brand of brands" class="footer__list-item">
-                <a [href]="brand.url" target="_blank" class="footer__link">{{brand.name}}</a>
-              </li>
-            </ul>
-          </section>
-        </div>
-        <div class="col-md">
-          <section>
-            <header>
-              <h2 class="footer__title heading-3">Other stuff</h2>
-            </header>
-            <ul class="list-unstyled">
-              <li
-                *ngFor="let stuff of otherStuff"
-                class="footer__list-item">
-                <a [href]="stuff.url" class="footer__link">{{stuff.name}}</a>
-              </li>
-            </ul>
-          </section>
-        </div>
-      </div>
+      <section>
+        <header>
+          <h2 class="footer__title heading-3">Brands</h2>
+        </header>
+        <ul class="list-unstyled">
+          <li *ngFor="let brand of brands" class="footer__list-item">
+            <a [href]="brand.url" target="_blank" class="footer__link">{{brand.name}}</a>
+          </li>
+        </ul>
+      </section>
+        <!--<section class="col-md>-->
+          <!--<header>-->
+            <!--<h2 class="footer__title heading-3">Other stuff</h2>-->
+          <!--</header>-->
+          <!--<ul class="list-unstyled">-->
+            <!--<li-->
+              <!--*ngFor="let stuff of otherStuff"-->
+              <!--class="footer__list-item">-->
+              <!--<a [href]="stuff.url" class="footer__link">{{stuff.name}}</a>-->
+            <!--</li>-->
+          <!--</ul>-->
+        <!--</section>-->
       <ul class="footer__menu list-unstyled list-inline">
         <li
           *ngFor="let item of general"
@@ -45,5 +38,4 @@
         <img [src]="'/assets/images/giraffe.png'" [srcset]="'/assets/images/giraffe@2x.png 2x'" alt="">
       </span>
     </div>
-  </div>
 </footer>
