--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,33 +1,29 @@
 <div class="section">
   <div class="row equal-heights">
-    <div class="col-sm">
-      <section>
-        <header>
-          <h2>Who are Jupiter <br>and the Giraffe?</h2>
-        </header>
+    <section class="col-sm">
+      <header>
+        <h2>Who are Jupiter <br>and the Giraffe?</h2>
+      </header>
 
-        <p>Jupiter and the Giraffe are a not-so-ordinary digital media agency. We love all things digital to the moon and back.</p>
+      <p>Jupiter and the Giraffe are a not-so-ordinary digital media agency. We love all things digital to the moon and back.</p>
 
-        <a href="" [routerLink]="['/who-we-are']">Read more</a><dots></dots>
-      </section>
-    </div>
-    <div class="col-sm">
-      <section>
-        <header>
-          <h2>What we <br>do</h2>
-        </header>
+      <a href="" [routerLink]="['/who-we-are']">Read more</a><dots></dots>
+    </section>
+    <section class="col-sm">
+      <header>
+        <h2>What we <br>do</h2>
+      </header>
 
-        <p>
-          We have a portfolio spanning website development, film, visual effects,
-          <abbr title="Search Engine Optimisation">SEO</abbr> consultancy, and marketing.
-          We're an all-in-one solution for your digital needs.
-        </p>
+      <p>
+        We have a portfolio spanning all kinds of web-based shenanigans from Wordpress theme development,
+        <abbr title="Search Engine Optimisation">SEO</abbr> consultancy, single-page applications (React, Angular) amongst others.
+        We're done it all.
+      </p>
 
-        <a href="" [routerLink]="['/what-we-do']">
-          Read more
-        </a><dots></dots>
-      </section>
-    </div>
+      <a href="" [routerLink]="['/what-we-do']">
+        Read more
+      </a><dots></dots>
+    </section>
   </div>
 </div>
 
