--- a/src/assets/sass/_btn.scss
+++ b/src/assets/sass/_btn.scss
@@ -1,9 +1,10 @@
 .btn {
+  @extend button;
+  line-height: 1.2;
+
   &--primary-outline {
     background-color: transparent;
     backdrop-filter: blur(3px);
-    border-width: 1px;
-    border-style: solid;
   }
 
   &--white {
