--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -31,7 +31,13 @@
           *ngFor="let item of general"
           class="list-inline-item"
           [ngClass]="item.class">
-          <a *ngIf="item.url" [href]="item.url" class="footer__link">{{item.name}}</a>
+          <a *ngIf="item.url" [routerLink]="item.url" class="footer__link">{{item.name}}</a>
+        </li>
+        <li class="list-inline-item footer__general-item">
+          <a href="/sitemap.xml" class="footer__link">Sitemap</a>
+        </li>
+        <li class="list-inline-item pull-right">
+          © 2016 Jupiter and the Giraffe
         </li>
       </ul>
       <span class="footer__giraffe">
