project cleanup before release

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,9 +15,9 @@
       </header>
 
       <p>
-        We have a portfolio spanning all kinds of web-based shenanigans from Wordpress theme development,
-        <abbr title="Search Engine Optimisation">SEO</abbr> consultancy, single-page applications (React, Angular) amongst others.
-        We're done it all.
+        We have a portfolio spanning all kinds of web-based shenanigans from Wordpress theme-development,
+        <abbr title="Search Engine Optimisation">SEO</abbr> consultancy, single-page applications (React, Angular), amongst others.
+        We've done it all.
       </p>
 
       <a href="" [routerLink]="['/what-we-do']">
