--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -13,6 +13,10 @@
 @import "a";
 @import "h";
 @import "button";
+@import "form";
+@import "label";
+@import "input";
+@import "textarea";
 
 //Helpers
 @import "fontawesome/font-awesome";
@@ -24,3 +28,4 @@
 
 //Components
 @import "work";
+@import "card";
