--- a/src/assets/sass/_button.scss
+++ b/src/assets/sass/_button.scss
@@ -9,7 +9,7 @@ button {
   border: 1px solid transparent;
   padding: .5rem 1rem;
   border-radius: .25rem;
-  transition: background-color .2s ease-in-out, color .2s ease-in-out;
+  transition: background-color $animation;
   background: $color-white;
   @include font-size($base-font);
 
@@ -18,5 +18,33 @@ button {
     cursor: pointer;
     border-color: $color-white;
     color: $color-white;
+  }
+
+  &[type="submit"] {
+    margin: $margin-xlarge 0;
+    float: right;
+    position: relative;
+
+    &:before {
+      content: "";
+      background-color: $color-green-haze;
+      display: inline-block;
+      position: absolute;
+      left: 0;
+      top: 0;
+      height: 100%;
+      width: 0;
+      transition: width $animation;
+      z-index: -1;
+    }
+
+    &:hover, &:focus {
+      outline: none;
+      border-color: $color-green-haze;
+
+      &:before {
+        width: 100%;
+      }
+    }
   }
 }
