--- a/src/assets/sass/_typography.scss
+++ b/src/assets/sass/_typography.scss
@@ -19,3 +19,17 @@
     text-align: right;
   }
 }
+
+.color {
+  &-black {
+    color: $color-black;
+  }
+
+  &-green {
+    color: $color-green-haze;
+  }
+
+  &-white {
+    color: $color-white;
+  }
+}
