--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -2,6 +2,7 @@ $main-font: 'KG-Summer-Storm';
 $title-font: $main-font;
 $body-font: -apple-system,system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 $base-font: 16;
+$small-font: 14;
 $line-height-base: 1.5;
 
 $heading-1: 55;
@@ -24,6 +25,7 @@ $color-sushi: #8CC63E;
 $color-zombie: #D6E598;
 $color-vividViolet: #8A3A95;
 $color-mine-shaft: #323232;
+$color-green-haze: #05AB33;
 
 $color-primary: $color-oldBrick;
 $color-secondary: $color-oldBrick;
@@ -47,3 +49,5 @@ $margin-small: 5px;
 $margin-medium: 10px;
 $margin-large: 15px;
 $margin-xlarge: 20px;
+
+$animation: .2s ease-in-out, color .2s ease-in-out;
