add feature on homepage

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -29,6 +29,12 @@
 
 <friends></friends>
 
+<featured
+  text="We're featuring our latest project to go live. Veratrak branding and website."
+  image="assets/images/veratrak-feature.jpg"
+  page="/veratrak"
+></featured>
+
 <tech></tech>
 
 
