add veratrak case study

--- a/src/app/home/friends/friends.component.html
+++ b/src/app/home/friends/friends.component.html
@@ -14,7 +14,7 @@
             class="img-fluid friends__image"
             src="/assets/images/{{ friend.img }}.png"
             srcset="/assets/images/{{friend.img}}.png 1x, /assets/images/{{friend.img}}@2x.png 2x"
-            [attr.alt]="friend.name">
+            [attr.alt]="friend.name + ' logo'">
         </a>
       </div>
     </li>
