--- a/src/assets/sass/_section.scss
+++ b/src/assets/sass/_section.scss
@@ -1,4 +1,10 @@
 .section {
   padding: $margin-xlarge 0;
   margin-bottom: $margin-xlarge;
+
+  &-right {
+    h2 {
+      text-align: right;
+    }
+  }
 }
