Revert "Feature/add veratrak (#15)"
This reverts commit d8bc2d5bca5c0a230f530a2c50954ca9fcb3b48f.

--- a/src/app/what/what.component.html
+++ b/src/app/what/what.component.html
@@ -1,28 +1,6 @@
 <section class="section">
   <header>
-    <h2>UI Design/UX</h2>
-  </header>
-
-  <p>
-    It all starts with 'why'. That's WHY we believe UX is so important. We can help draw out your KPI's and reach your
-    targets. UI is the icing on the cake and a layer of beauty that blesses a great core user-experience.
-  </p>
-</section>
-
-<section class="section section-right">
-  <header>
-    <h2>Interaction Design</h2>
-  </header>
-
-  <p>
-    We don't just think in static. We want your website to breathe, to amaze and to feel alive. Interactions and animations
-    can really bring your web application to life and we aren't afraid to explore this.
-  </p>
-</section>
-
-<section class="section">
-  <header>
-    <h2>Development</h2>
+    <h2>Websites</h2>
   </header>
     <p>
       We love front-end development. HTML, CSS, and JavaScript is our bread and butter and who doesn't like bread and butter? Not us.
@@ -30,10 +8,23 @@
     </p>
 
     <p>
-      We can create everything from static websites, to complete Wordpress CMS systems.
+      We can create everything from static websites, to complete Wordpress CMS systems and Wordpress themes.
       We have experience in React, AngularJS and Angular and have a solid knowledge of <abbr title="HyperText Markup Language">HTML</abbr>,
       <abbr title="Cascading Style Sheets">CSS</abbr> and JavaScript meaning new technology is an exciting adventure for us.
     </p>
 
     <p><a [routerLink]="['/work']">See all our website work</a><dots></dots></p>
+</section>
+<section class="section">
+  <header>
+    <h2>Agile enthusiasts</h2>
+  </header>
+  <p>
+    Experienced in Agile, we understand how to get the most value out of your demands in the quickest time possible.
+  </p>
+
+  <p>
+    With years of experience working in a scrum team, terms like <q>definition of done</q>, <q>Scrum Master</q>
+    and <q>backlog grooming</q> are second nature and we understand when and how to use Agile.
+  </p>
 </section>
