--- a/src/app/work.template.html
+++ b/src/app/work.template.html
@@ -1,8 +1,8 @@
 <div class="section">
   <section>
     <header>
-      <h2>{{data.name}}</h2>
+      <h2>{{data?.name}}</h2>
     </header>
-    <div [innerHTML]="data.content"></div>
+    <div [innerHTML]="data?.content"></div>
   </section>
 </div>
