--- a/src/app/home/friends/friends.component.scss
+++ b/src/app/home/friends/friends.component.scss
@@ -7,11 +7,13 @@
 
   &__image {
     max-width: 300px;
-    width: 100%;
+    width: auto;
     height: auto;
+    max-height: 200px;
 
     @media screen and (max-width: $screen-sm - 1) {
       max-width: 150px;
+      max-height: 75px;
     }
   }
 }
