--- a/src/app/what/what.component.html
+++ b/src/app/what/what.component.html
@@ -3,14 +3,13 @@
     <h2>Websites</h2>
   </header>
     <p>
-      We love front-end development. HTML, CSS, and JavaScript is our bread and butter and who doesn't like bread and butter? Not us.
-      That's who.
+      We can create everything from static websites, to complete Wordpress CMS systems.
+      We have experience in React, AngularJS and Angular and have a solid knowledge of <abbr title="HyperText Markup Language">HTML</abbr>,
+      <abbr title="Cascading Style Sheets">CSS</abbr> and JavaScript meaning new technology is an exciting adventure for us.
     </p>
 
     <p>
-      We can create everything from static websites, to complete Wordpress CMS systems and Wordpress themes.
-      We have experience in React, AngularJS and Angular and have a solid knowledge of <abbr title="HyperText Markup Language">HTML</abbr>,
-      <abbr title="Cascading Style Sheets">CSS</abbr> and JavaScript meaning new technology is an exciting adventure for us.
+      Whatever your challenge, we'd love to talk to you about it so feel free to <a [routerLink]="['/contact']">contact us</a>
     </p>
 
     <p><a [routerLink]="['/work']">See all our website work</a><dots></dots></p>
