--- a/src/app/home/friends/friends.component.html
+++ b/src/app/home/friends/friends.component.html
@@ -8,15 +8,13 @@
   </p>
   <ul class="row work list-unstyled">
     <li class="col-sm-4 col-6" *ngFor="let friend of friends">
-      <div class="work__item text-center">
-        <a [routerLink]="friend.page" class="work__link">
-          <img
-            class="img-fluid friends__image"
-            src="/assets/images/{{ friend.img }}.png"
-            srcset="/assets/images/{{friend.img}}.png 1x, /assets/images/{{friend.img}}@2x.png 2x"
-            [attr.alt]="friend.name">
-        </a>
-      </div>
+      <a [routerLink]="friend.page" class="friends__link">
+        <img
+          class="img-fluid friends__image"
+          src="/assets/images/{{ friend.img }}.png"
+          srcset="/assets/images/{{friend.img}}.png 1x, /assets/images/{{friend.img}}@2x.png 2x"
+          [attr.alt]="friend.name">
+      </a>
     </li>
   </ul>
 </section>
