--- a/src/app/home/friends/friends.component.scss
+++ b/src/app/home/friends/friends.component.scss
@@ -1,19 +1,20 @@
 @import "../../../assets/sass/variables";
 
 .friends {
-  .work__link {
-
-  }
-
   &__image {
-    max-width: 300px;
-    width: auto;
-    height: auto;
     max-height: 200px;
+    vertical-align: middle;
 
     @media screen and (max-width: $screen-sm - 1) {
       max-width: 150px;
       max-height: 75px;
     }
+  }
+
+  &__link {
+    display: block;
+    text-align: center;
+    vertical-align: middle;
+    padding: 10px 0;
   }
 }
