--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,8 @@
 
       <p>
         We have a portfolio spanning all kinds of web-based shenanigans from Wordpress theme-development,
-        <abbr title="Search Engine Optimisation">SEO</abbr> consultancy, single-page applications (React, Angular), amongst others.
+        <abbr title="Search Engine Optimisation">SEO</abbr> consultancy, single-page applications (React, Angular),
+        amongst others.
         We've done it all.
       </p>
 
@@ -28,50 +29,3 @@
 </div>
 
 <friends></friends>
-
-<tech></tech>
-
-
-<!--<div class="section">-->
-  <!--<section>-->
-    <!--<header>-->
-      <!--<h2>Showcase -<br> Uncle Wormsley's Christmas</h2>-->
-    <!--</header>-->
-
-
-    <!--<ifrenvironment src="https://player.vimeo.com/video/41905278" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="center-block margin-bottom&#45;&#45;lg"></iframe>-->
-
-    <!--<p>-->
-      <!--We did all the explosions and visual effects and things for <a href="http://rathergood.com" target="_blank">Rathergoods</a>, rather fantantastic full-length <strong>Uncle Wormsley's Christmas</strong>.<br>-->
-      <!--Featuring narration by Steve Coogan, voiced by Julian Barratt, Julia Davis, John Thomson and Ben Baker.<br>-->
-      <!--Here are some things people said about it...-->
-    <!--</p>-->
-
-
-    <!--<blockquote>-->
-      <!--<q>This macabre offering ranks as one of the darkest festive morality tales ever conceived</q>-->
-      <!--<footer>The Observer</footer>-->
-    <!--</blockquote>-->
-
-    <!--<blockquote>-->
-      <!--<q>...gloriously grotesque cautionary tale</q>-->
-      <!--<footer>The Mail On Sunday</footer>-->
-    <!--</blockquote>-->
-
-    <!--<blockquote>-->
-      <!--<q>dark and rather wonderful</q>-->
-      <!--<footer>I</footer>-->
-    <!--</blockquote>-->
-
-    <!--<blockquote>-->
-      <!--<q>A weird, exciting half-hour break from the norm</q>-->
-      <!--<footer>The Guardian</footer>-->
-    <!--</blockquote>-->
-
-    <!--<blockquote>-->
-      <!--<q>Funny, dark and frequently disturbing</q>-->
-      <!--<footer>Time Out</footer>-->
-    <!--</blockquote>-->
-
-  <!--</section>-->
-<!--</div>-->
