--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -3,7 +3,7 @@
   <div class="vertical-wrapper">
     <div class="hero__logo">
       <a [routerLink]="['/']" class="hero__link">
-        <logo></logo>
+        <app-logo></app-logo>
       </a>
     </div>
 
