--- a/src/app/what/what.component.html
+++ b/src/app/what/what.component.html
@@ -12,7 +12,7 @@
       Whatever your challenge, we'd love to talk to you about it so feel free to <a [routerLink]="['/contact']">contact us</a>
     </p>
 
-    <p><a [routerLink]="['/work']">See all our website work</a><dots></dots></p>
+    <p><a [routerLink]="['/work']">See all our website work</a><app-dots-component></app-dots-component></p>
 </section>
 <section class="section">
   <header>
