--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
 
       <p>Jupiter and the Giraffe are a not-so-ordinary digital media agency. We love all things digital to the moon and back.</p>
 
-      <a href="" [routerLink]="['/who-we-are']">Read more</a><dots></dots>
+      <a href="" [routerLink]="['/who-we-are']">Read more</a><app-dots-component></app-dots-component>
     </section>
     <section class="col-sm">
       <header>
@@ -23,9 +23,9 @@
 
       <a href="" [routerLink]="['/what-we-do']">
         Read more
-      </a><dots></dots>
+      </a><app-dots-component></app-dots-component>
     </section>
   </div>
 </div>
 
-<friends></friends>
+<app-friends-component></app-friends-component>
