--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,4 +1,4 @@
 <h1>Sorry</h1>
 <h2>404: Page not found</h2>
 
-<p>Go <a [routerLink]="['/']">home</a>?<dots></dots></p>
+<p>Go <a [routerLink]="['/']">home</a>?<app-dots-component></app-dots-component></p>
