--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div [ngClass]="{'keyboard-user': isKeyboardUser}">
   <app-header-component [show]="showHeader"></app-header-component>
 
-  <app-stars-components></app-stars-components>
+  <app-stars-component></app-stars-component>
   <div
     class="jupiter"
     data-start="top: 400px;"
