Add contact form (#18)
* add .htaccess file and google analytics

* update sitemap

* Improve title for google results (#13)

* add firebase

* writing to database

* finally added contact form

* move nodemailer on to mailgun

* Feature/add veratrak (#15)

* Final updates (#3)

* setup angular 2

* add build to git ignore

* add files

* cleanup

* update credentials

* new url

* new thing

* new url

* typo

* try tests

* add all files

* install angular cli

* add install

* sudo

* test

* add circle ci

* add more circle ci

* another test

* test

* correct

* correct

* more fix

* update

* remove step

* version 2

* new info

* add angular 4

* clean circle ci file

* changing circle ci file

* update circle ci file

* override test

* update deploy

* update deploy

* test one

* install angularcli

* update node

* update node

* remove angular install

* node sass rebuild

* typo

* typo

* cleanup

* add back in node sass

* add tests back in

* update email

* override dependencies

* typo

* override tests

* override tests

* fix footer

* google analyticts

* project cleanup before release

* Update README.md

* Update README.md

* Release 1.0.1 (#10)

* setup angular 2

* add build to git ignore

* add files

* cleanup

* update credentials

* new url

* new thing

* new url

* typo

* try tests

* add all files

* install angular cli

* add install

* sudo

* test

* add circle ci

* add more circle ci

* another test

* test

* correct

* correct

* more fix

* update

* remove step

* version 2

* new info

* add angular 4

* clean circle ci file

* changing circle ci file

* update circle ci file

* override test

* update deploy

* update deploy

* test one

* install angularcli

* update node

* update node

* remove angular install

* nod

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div [ngClass]="{'keyboard-user': isKeyboardUser}">
-  <page-header [show]="showHeader"></page-header>
+  <app-header-component [show]="showHeader"></app-header-component>
 
-  <stars></stars>
+  <app-stars-component></app-stars-component>
   <div
     class="jupiter"
     data-start="top: 400px;"
@@ -9,15 +9,15 @@
   </div>
 
   <div class="container">
-    <hero [home]="isHome"></hero>
+    <app-hero-component [home]="isHome"></app-hero-component>
     <main>
       <router-outlet></router-outlet>
     </main>
   </div>
 
-  <a href="#" class="scroll-up fa fa-arrow-up" aria-hidden="false" [ngClass]="{'scroll-up--active': showHeader}">
+  <a (click)="scrollUp($event)" class="scroll-up fa fa-arrow-up" aria-hidden="false" [ngClass]="{'scroll-up--active': showHeader}">
     <span class="sr-only">Scroll to top</span>
   </a>
 
-  <page-footer></page-footer>
+  <app-footer-component></app-footer-component>
 </div>
