--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,6 +1,7 @@
 @import "../../assets/sass/variables";
 
 .footer {
+  margin-top: 60px;
   background-color: $color-gray-dark;
   color: $color-white;
   z-index: 3;
