--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,13 @@
-<div class="section">
+<h1 class="sr-only">Jupiter and the Giraffe</h1>
+
+<div class="section home">
   <div class="row equal-heights">
     <section class="col-sm">
       <header>
         <h2>Who are Jupiter <br>and the Giraffe?</h2>
       </header>
 
-      <p>Jupiter and the Giraffe are a not-so-ordinary digital media agency. We love all things digital to the moon and back.</p>
+      <p>Jupiter and the Giraffe are a not-so-ordinary branding agency. We love all things digital to the moon and back.</p>
 
       <a href="" [routerLink]="['/who-we-are']">Read more</a><app-dots-component></app-dots-component>
     </section>
@@ -15,10 +17,8 @@
       </header>
 
       <p>
-        We have a portfolio spanning all kinds of web-based shenanigans from Wordpress theme-development,
-        <abbr title="Search Engine Optimisation">SEO</abbr> consultancy, single-page applications (React, Angular),
-        amongst others.
-        We've done it all.
+        We care about your brand as much as you do, we have experience in logo design and corporate identity. To finish
+        it off, we can build you a kickass website to go with it.
       </p>
 
       <a href="" [routerLink]="['/what-we-do']">
@@ -26,6 +26,7 @@
       </a><app-dots-component></app-dots-component>
     </section>
   </div>
+
+  <app-friends-component></app-friends-component>
 </div>
 
-<app-friends-component></app-friends-component>
