--- a/src/app/logo/logo.component.html
+++ b/src/app/logo/logo.component.html
@@ -2,7 +2,7 @@
   <div class="margin-bottom--sm">
     <span class="logo__moon">.</span><span class="logo__moon">.</span><span class="logo__moon">.</span><span class="logo__moon">.</span>
   </div>
-  <h1 class="logo__text">
+  <div class="logo__text">
     Jupiter and<br> the Giraffe
-  </h1>
+  </div>
 </header>
