--- a/src/app/northstar/northstar.component.html
+++ b/src/app/northstar/northstar.component.html
@@ -1,13 +1,13 @@
 <img src="assets/images/northstar-feature.png" alt="" class="img-fluid">
 
-<h2>North Star Law - Website Design</h2>
+<h1>North Star Law - Branding and Website Design/build</h1>
 
 <p>
   North Star Law are a law-firm based in South Kensington, London who specialise in property law,
   private client/tax and immigration law.
 </p>
 
-<h3>The Project</h3>
+<h2>The Project</h2>
 
 <p>
   They asked us to revamp their existing website to something more modern and practical.
@@ -17,7 +17,7 @@
   Bold, striking banners, clear and clean language and professional aesthetic that doesn't undermine their services.
 </p>
 
-<h3>Designing the Site</h3>
+<h2>Designing the Site</h2>
 
 <p>
   North Star provided us with some wireframes of the structure they envisioned for the website.
@@ -27,7 +27,7 @@
   Enabling a simple dropdown in the header was an easy, elegant solution to this, answering this question on the homepage took a little more tweaking...
 </p>
 
-<h3>A New Colour</h3>
+<h2>A New Colour</h2>
 
 <p>
   As we worked through the design, it was looking very black and white and didn't exuberate class or necessarily have an identity that made them stand out.
@@ -37,11 +37,7 @@
 </p>
 
 <figure class="text-center">
-<<<<<<< HEAD
-  <img src="assets/images/northstar-colour.png" alt="colour pallet of grey, white, blue, gold and brown" class="img-fluid">
-=======
   <img src="assets/images/northstar-colour.png" alt="colour pallet of grey, white, blue, gold and brown" class="img-fluid image">
->>>>>>> 7ced214276187b3a786763fbad69c75877d3a3cc
   <figcaption>Colour pallete proposed to North Star</figcaption>
 </figure>
 
@@ -62,7 +58,7 @@
   We suggested it must be warm or gold which compliments the colour pallete aesthetically but also conveys feelings of closeness and safety which is not necessarily something associated with law and the gold conveys importance and confidence which is obviously important when dealing with law.
 </p>
 
-<h3>Looking Again at the Logo</h3>
+<h2>Looking Again at the Logo</h2>
 
 <p>
   The star was something we tried bringing to the focal point of their identity.
@@ -70,7 +66,7 @@
   animated introduction on the homepage but we also felt it cleaned up the design in the header and made the website less busy.
 </p>
 
-<h3>Careful Choice of Images</h3>
+<h2>Careful Choice of Images</h2>
 
 <p>
   We feel the imagery really brings the site to life, along with the colour pallete and simple user-journeys.
