--- a/src/app/what/what.component.html
+++ b/src/app/what/what.component.html
@@ -1,29 +1,52 @@
-<section class="section">
+<section class="what-we-do">
   <header>
-    <h2>Websites</h2>
+    <h1 class="sr-only">What we do</h1>
   </header>
+
+  <p class="what-we-do__tagline">
+    Helping your brand find its voice and look amazing. Online and everywhere else.
+  </p>
+
+  <section class="section">
+    <header>
+      <h2>Brand</h2>
+    </header>
+
     <p>
-      We can create everything from static websites, to complete Wordpress CMS systems.
-      We have experience in React, AngularJS and Angular and have a solid knowledge of <abbr title="HyperText Markup Language">HTML</abbr>,
-      <abbr title="Cascading Style Sheets">CSS</abbr> and JavaScript meaning new technology is an exciting adventure for us.
+      Like you, we believe brand aesthetics are the most important thing and it all starts with your logo.
+      Something engaging, unique and most importantly you!
+      A logo tells much about who you are in the shortest time so getting this right can make or break your business.
     </p>
 
     <p>
-      Whatever your challenge, we'd love to talk to you about it so feel free to <a [routerLink]="['/contact']">contact us</a>
+      We’re all about sculpting your brand identity around your logo, combining wicked typography,
+      striking colours, tone of voice and brand strategy in an exciting, elegantly built design.
+      We're not messing around.
     </p>
+  </section>
 
-    <p><a [routerLink]="['/work']">See all our website work</a><app-dots-component></app-dots-component></p>
-</section>
-<section class="section">
-  <header>
-    <h2>Agile enthusiasts</h2>
-  </header>
-  <p>
-    Experienced in Agile, we understand how to get the most value out of your demands in the quickest time possible.
-  </p>
+  <section class="section">
+    <header>
+      <h2>Websites</h2>
+    </header>
+      <p>
+        You know your website must stand out.
+        We’re here to take your brand and build an online experience that turns heads.
+        We pride ourselves in writing clean, maintainable code on a platform you can trust using the latest technologies.
+        We’re confident we can build the site you need, using elegant user experience (UX),
+        optimising it for search engines (SEO) and making it accessible to all. We have your users in mind.
+      </p>
 
-  <p>
-    With years of experience working in a scrum team, terms like <q>definition of done</q>, <q>Scrum Master</q>
-    and <q>backlog grooming</q> are second nature and we understand when and how to use Agile.
-  </p>
+      <p>
+        From our years of experience in the industry, using technologies such as React,
+        Angular and Vue or building brochure sites to complete eCommerce and Wordpress systems are a piece of cake
+      </p>
+
+      <p>
+        Whatever your challenge, we'd love to talk to you about it so feel free to <a [routerLink]="['/contact']">contact us</a>
+      </p>
+
+      <p><a [routerLink]="['/work']">See all our website work</a><app-dots-component></app-dots-component></p>
+  </section>
 </section>
+
