--- a/src/app/home/friends/friends.component.scss
+++ b/src/app/home/friends/friends.component.scss
@@ -1,4 +1,5 @@
 @import "../../../assets/sass/variables";
+@import "../../../assets/sass/mixins";
 
 .friends {
   &__image {
@@ -13,8 +14,17 @@
 
   &__link {
     display: block;
-    text-align: center;
-    vertical-align: middle;
+    align-self: center;
     padding: 10px 0;
+  }
+
+  li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  h2 {
+    @include font-size($heading-1);
   }
 }
