--- a/src/app/logo/logo.component.scss
+++ b/src/app/logo/logo.component.scss
@@ -7,6 +7,8 @@
   &__text {
     margin-top: 0;
     margin-bottom: 10px;
+    @include font-size(55);
+    font-family: $title-font;
   }
 
   &__moon {
