--- a/src/app/northstar/northstar.component.html
+++ b/src/app/northstar/northstar.component.html
@@ -1,9 +1,9 @@
 <img src="assets/images/northstar-feature.png" alt="" class="img-fluid">
 
 <section>
-  <heading>
+  <header>
     <h1>North Star Law - Branding and Website Design/build</h1>
-  </heading>
+  </header>
 
   <p>
     North Star Law are a law-firm based in South Kensington, London who specialise in property law,
@@ -11,9 +11,9 @@
   </p>
 
   <section>
-    <heading>
+    <header>
       <h2>The Project</h2>
-    </heading>
+    </header>
 
     <p>
       They asked us to revamp their existing website to something more modern and practical.
@@ -25,9 +25,9 @@
   </section>
 
   <section>
-    <heading>
+    <header>
       <h2>Designing the Site</h2>
-    </heading>
+    </header>
 
     <p>
       North Star provided us with some wireframes of the structure they envisioned for the website.
@@ -39,9 +39,9 @@
   </section>
 
   <section>
-    <heading>
+    <header>
       <h2>A New Colour</h2>
-    </heading>
+    </header>
 
     <p>
       As we worked through the design, it was looking very black and white and didn't exuberate class or necessarily have an identity that made them stand out.
@@ -74,9 +74,9 @@
   </section>
 
   <section>
-    <heading>
+    <header>
       <h2>Looking Again at the Logo</h2>
-    </heading>
+    </header>
 
     <p>
       The star was something we tried bringing to the focal point of their identity.
@@ -86,9 +86,9 @@
   </section>
 
   <section>
-    <heading>
+    <header>
       <h2>Careful Choice of Images</h2>
-    </heading>
+    </header>
 
     <p>
       We feel the imagery really brings the site to life, along with the colour pallete and simple user-journeys.
