fix lots of other stuff

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
-<h1 class="sr-only">Jupiter and the Giraffe</h1>
+<section class="home">
+  <h1 class="sr-only">Jupiter and the Giraffe</h1>
 
-<div class="section home">
-  <div class="row equal-heights">
+  <div class="row equal-heights home__about">
     <section class="col-sm">
       <header>
         <h2>Who are Jupiter <br>and the Giraffe?</h2>
@@ -28,5 +28,5 @@
   </div>
 
   <app-friends-component></app-friends-component>
-</div>
+</section>
 
