--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -7,12 +7,12 @@
   margin-bottom: 35px;
 
   &.home-page {
-    height: 100vh;
-    margin-bottom: 0;
+    margin-bottom: $margin-xlarge;
 
-    @media screen and (max-width: $screen-sm - 1) {
-      height: auto;
-      margin-bottom: $margin-xlarge;
+    @include md {
+      height: 100vh;
+      margin-bottom: 0;
+      min-height: 500px;
     }
   }
 
