--- a/src/app/home/friends/friends.component.scss
+++ b/src/app/home/friends/friends.component.scss
@@ -4,6 +4,7 @@
 .friends {
   &__image {
     max-height: 200px;
+    max-width: 200px;
     vertical-align: middle;
     transition: transform .3s ease;
 
@@ -16,17 +17,29 @@
   &__link {
     display: block;
     align-self: center;
-    padding: 10px 0;
+    padding: 20px;
+
+    @include md {
+      padding: 0;
+    }
   }
 
   li {
     display: flex;
     align-items: center;
     justify-content: center;
+
+    @include md {
+      margin-bottom: 20px;
+      min-height: 100px;
+    }
   }
 
   h2 {
-    @include font-size($heading-1);
+
+    @include md {
+      @include font-size($heading-1);
+    }
   }
 
   a {
