--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,6 +3,18 @@
 
 .home {
   h2 {
-    @include font-size($heading-1);
+    @include md {
+      @include font-size($heading-1);
+    }
+  }
+
+  .work {
+    @include md {
+      margin-top: 20px;
+    }
+  }
+
+  &__about {
+    margin-bottom: $margin-xlarge;
   }
 }
