--- a/src/assets/sass/_form.scss
+++ b/src/assets/sass/_form.scss
@@ -5,8 +5,8 @@ form {
 .form {
   &-error {
     margin: $margin-small 0;
-    background: $color-white;
-    color: $color-oldBrick;
+    color: $color-white;
+    background: $color-oldBrick;
     font-family: $title-font;
     padding: $margin-small;
     border-radius: 5px;
