--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -25,7 +25,7 @@
       color: inherit;
       text-decoration: none;
       background: none;
-      padding: 0;
+      padding: 0 !important;
     }
   }
 
