add some more animations

--- a/src/app/what/what.component.html
+++ b/src/app/what/what.component.html
@@ -23,6 +23,10 @@
       striking colours, tone of voice and brand strategy in an exciting, elegantly built design.
       We're not messing around.
     </p>
+
+    <p>
+      <a [routerLink]="['/contact']">Contact us</a> if your brand needs a fresh new pair of trainers
+    </p>
   </section>
 
   <section class="section">
@@ -43,10 +47,8 @@
       </p>
 
       <p>
-        Whatever your challenge, we'd love to talk to you about it so feel free to <a [routerLink]="['/contact']">contact us</a>
+        Whatever your challenge, we'd love to talk to you about it so <a [routerLink]="['/contact']">contact us</a>!
       </p>
-
-      <p><a [routerLink]="['/work']">See all our website work</a><app-dots-component></app-dots-component></p>
   </section>
 </section>
 
