--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,10 @@
 <section class="section">
   <header>
-    <h1 class="sr-only">Contact Us</h1>
+    <h1>
+      <div>Got work?</div>
+      Or just here to say "Hi"?</h1>
   </header>
+
   <div class="row">
     <section class="col-md-6">
       <h2>Contact Us</h2>
