--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,13 +1,23 @@
 <section class="section">
   <header>
-    <h2>Contact Us</h2>
+    <h1>
+      <div>Got work?</div>
+      Or just here to say "Hi"?</h1>
   </header>
+
   <div class="row">
-    <div class="col-md-6">
+    <section class="col-md-6">
+      <h2>Contact Us</h2>
       <div *ngIf="!name; else forminfo">
         <p>
           Good to see you. We were just talking about you! Drop us a line and let us know why you are here.
         </p>
+
+        <p>Email us at <a href="mailto:salam@jupiterandthegiraffe.com?subject=Hey I'm on your website!!" class="underline">salam@jupiterandthegiraffe.com</a>.</p>
+
+        <p>Phone us on <a href="tel:447816061943" class="underline">+44 7816 061943</a>.</p>
+
+        <div class="text-center">or</div>
 
         <form [formGroup]="rForm" (ngSubmit)="sendMessage(rForm.value)">
           <label>
@@ -71,8 +81,12 @@
         </div>
 
       </ng-template>
-    </div>
-    <div class="col-md-6">
+
+    </section>
+    <section class="col-md-6">
+      <header>
+        <h2>Referral Scheme</h2>
+      </header>
       <div class="text-center">
         <span class="fa-stack fa-3x">
           <i class="fa fa-circle fa-stack-2x"></i>
@@ -80,15 +94,12 @@
         </span>
       </div>
 
-      <h3>
-        Referral Scheme
-      </h3>
 
       <p>
         We love to give. If you know someone that needs our help,
         put their contact details in the message and you may be rewarded with 10% of the final invoice amount if we're
         successful in landing the work. Kerching!
       </p>
-    </div>
+    </section>
   </div>
 </section>
